changes in about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 
     <div class="main-content" >
         {{>header}}
-    
+        <p>This site was created by Sarthak Agarwal. It uses data from mapbox.com and darksky.net!</p>
         <img class="potrait" src="img/LOGO.png">
     </div> 
 
